--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
-  "engines":{
-  "node":"22.5.1"
-    },
+  "engines": {
+    "node": "22.5.1"
+  },
+  "scripts": {
+  "start": "node app.js"
+},
+"scripts": {
+  "build": "react-scripts build",
+  "start": "react-scripts start"
+},
+"scripts": {
+  "build": "tsc",
+  "start": "node dist/index.js"
+}
+,
+
   "dependencies": {
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
