--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
+  "name": "express-app",
+  "version": "1.0.0",
   "engines": {
     "node": "22.5.1"
   },
   "scripts": {
-  "start": "node app.js"
-},
-"scripts": {
-  "build": "react-scripts build",
-  "start": "react-scripts start"
-},
-"scripts": {
-  "build": "tsc",
-  "start": "node dist/index.js"
-}
-,
-
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
@@ -32,5 +25,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
